# openai-agents-mcp-server

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.cursor/rules/: DONE.mdc  WIP.mdc  notes.mdc
src/agents_mcp_server/: __init__.py  __main__.py  cli.py  server.py
